fix(header): add dropdown divider spacing

--- a/packages/bootstrap/scss/themes/neo/header/_component.scss
+++ b/packages/bootstrap/scss/themes/neo/header/_component.scss
@@ -143,11 +143,11 @@
           }
         }
 
-        @include bootstrap.media-breakpoint-down(md) {
-          // .popover {
-          //   display: none !important;
-          // }
+        .dropdown-divider {
+          margin-block: $spacer-4;
+        }
 
+        @include bootstrap.media-breakpoint-down(md) {
           .avatar {
             --#{$prefix}avatar-size: 2rem;
           }
